Added the chrome driver

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -38,11 +38,11 @@ step.provider.pkg=com.qmetry.qaf.automation
 #[selenium]
 remote.server=localhost
 remote.port=4444
-driver.name=chromeDriver
+driver.name=chromedriver
 #webdriver.remote.session=fd313470-4e25-4122-9009-5db2ae04c98d
 selenium.wait.timeout=10000
 
-webdriver.chrome.driver = resources/chromedriver.exe
+webdriver.chrome.driver = resources/chromedrivermac
 #selenium.screenshot.dir=test-results/img/
 #selenium.report.dir=test-results/html/
 
